# cppLearn

./: .autocp  .gitignore  10.cpp  CMakeLists.txt  Cargo.toml  Code.out  GetCodeLine.cpp  Test.cpp  Testlib.cpp  Testlib.in  Testlib.out  in.in  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  maxPrime.cpp  prime.out  readme.md  模板.cpp
XCPC-1.8.8/02 - 打印稿模板汇总/: 01 - 基础算法.md  03A - 图论.md  03B - 图论常见结论及例题.md  04 - 网络流总模板.md  05A - 数论.md  05B - 数论常见结论及例题.md  06A - 二维几何.md  06B - 多边形相关.md  06C - 三维几何及常见例题.md  08A - 数据结构.md  08B - 数据结构.md  10 - 串.md  12 - 常用例题.md  (+3 more)
doc/: 天依字符画.txt  流萤字符画.txt  电偶极子模拟.m
inAndoutFile/: 120 (1).in  120.in  120.out  P1018_1.in  P1020_21.in  P1020_21.out  P1103_2.in  P1111_1.in  P1349_1.in  P1414_2.in  P1414_7.in  P1414_7.out  P1424_9.in  P1424_9.out  P1816_1.in  P1816_1.out  P1880_2.in  P1880_2.out  P1939_3.out  P2677_1.in  P2709_1.out  P3367_1.in  P3367_1.out  P5734_2.in  P5734_2.out  P7771_10.in  P7771_10.out
liaoning/: B.cpp  B.py  C.cpp  E.cpp  L.cpp
problam/: P10423.cpp  P1086.cpp  P1601.cpp  P9741.cpp  PTA-7-32.cpp
problemLuogu/: P1017_NOIP_2000__.cpp
src/: Huffman.cpp  Test.cpp  Testlib.c  Testlib.cpp  Testlib.go  Testlib.py  Testlib.zig  fano.cpp  getCodeLine.go  hackCode.cpp  naniotabeta.cpp  二元信息熵变化曲线.py
template/: LazySegmentTree.cpp  MInt.cpp  Segment_Tree.cpp  TreeArray.cpp  high_add_mul.cpp  int128.cpp  matrix_pow.cpp  union_find.cpp  单测试模板.cpp  取模类.cpp  多测试模板.cpp  平面几何基本模板.cpp  快速幂.cpp  素数测试与质因数分解.cpp  线性基.cpp  线段树.cpp  通用.cpp
模板/: Segment_Tree.cpp  TreeArray.cpp  quick_read.cpp  单测试模板.cpp  单测试模板洛谷特供.cpp  多测试模板.cpp
(+1509 files in other folders)
